# eb_class

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.finer  Dockerfile.tnpp  README.md  baseline.py  baseline_svm.py  data_reader.py  eb_data_reader.py  eb_model.py  eb_train.py  evaluate.py  explain-trunc.ipynb  explain.ipynb  length_analysis.ipynb  model.py  ord.sh  pyproject.toml  requirements.txt  train.py
.github/workflows/: docker-publish.yml
finnessayscore/: baseline.py  baseline_svm.py  data_reader.py  evaluate.py  explain.py  explain_trunc.py  grade_scale.py  length_analysis.py  loss.py  mk_grade_pickle.py  model.py  parse.py  preprocessing.py  process_tkp.py  train.py
finnessayscore/explain/: explain.py  explain_trunc.py  utils.py
finnessayscore/preproc/: clean.py  rm_no_label.py  split.py  utils.py
preproc_finer/: parse.py
preproc_tnpp/: parse.py
scripts/: average.py  batch_run.sh  explain.sh  explain_trunc.sh  grid.sh  length_analysis.sh  momaf.sh  poetry_run.sh  puhti.sh  run.sh  sent.sh
workflow/: Snakefile
