[tool.poetry]
name = "finnessayscore"
version = "0.1.0"
description = ""
authors = ["Frankie Robertson <frankie@robertson.name>"]

[tool.poetry.dependencies]
python = "^3.8"
pytorch-lightning = "^1.4.0"
transformers = "^4.9.1"
scikit-learn = "^0.24.2"
matplotlib = "^3.4.3"
captum = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
